# muc

./: .gitignore  Makefile  README.md  pyproject.toml
src/: audio_manager.py  cli.py  config.py  interactive_menu.py  lazy_loader.py  memory.py  soundboard.py
tests/: conftest.py
tests/benchmarks/: test_performance.py
tests/fixtures/: __init__.py
tests/integration/: test_cli.py
tests/unit/: test_audio_manager.py  test_config.py  test_lazy_loader.py  test_memory.py  test_soundboard.py
